icell/tests/compile_fail/generative/outlives-2.stderr
error[E0505]: cannot move out of `value` because it is borrowed
  --> $DIR/outlives-2.rs:9:10
   |
7  |     let x = owner.read(&value);
   |                        ------ borrow of `value` occurs here
8  | 
9  |     drop(value);
   |          ^^^^^ move out of `value` occurs here
10 | 
11 |     assert_eq!(*x, 10);
   |     ------------------- borrow later used here
